Bug 37388 - [graphite] No warn with "-O0 -fgraphite" when cloog or ppl are not present
Summary: [graphite] No warn with "-O0 -fgraphite" when cloog or ppl are not present
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: ---
Assignee: Sebastian Pop
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-05 21:18 UTC by Sebastian Pop
Modified: 2008-09-10 16:06 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments
fix (583 bytes, patch)
2008-09-05 21:22 UTC, Sebastian Pop
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Pop 2008-09-05 21:18:44 UTC
GCC does not fail at -O0 when -fgraphite is used and support for
graphite is not built in the compiler.
Comment 1 Sebastian Pop 2008-09-05 21:22:01 UTC
Created attachment 16236 [details]
fix

This patch fixes the bug.
Comment 2 Sebastian Pop 2008-09-10 14:48:01 UTC
Subject: Bug 37388

Author: spop
Date: Wed Sep 10 14:46:35 2008
New Revision: 140232

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=140232
Log:
2008-09-10  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/37388
	* toplev.c (process_options): Fail and warn when graphite
	flags are used, but the compiler has not been configured
	with graphite libraries.
	* graphite.c (graphite_transform_loops): Remove printfs
	to dump_file for the case when graphite is not available.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/graphite.c
    trunk/gcc/toplev.c

Comment 3 Sebastian Pop 2008-09-10 16:06:59 UTC
Fixed.