2008-09-10  Sebastian Pop  <sebastian.pop@amd.com>

PR tree-optimization/37388
	* toplev.c (process_options): Fail and warn when graphite
	flags are used, but the compiler has not been configured
	with graphite libraries.
	* graphite.c (graphite_transform_loops): Remove printfs
	to dump_file for the case when graphite is not available.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140232 138bc75d-0d04-0410-961f-82ee72b054a4